# api/docs/swagger.json
@@ -172,55 +172,7 @@
                 }
             }
         },
-        "/direction/get": {
-            "get": {
-                "security": [
-                    {
-                        "AccessTokenHeader": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "direction"
-                ],
-                "summary": "returns direction by id",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "direction id",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Direction"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/apierrors.APIError"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/apierrors.APIError"
-                        }
-                    }
-                }
-            }
-        },
-        "/direction/get_all": {
+        "/direction/": {
             "get": {
                 "security": [
                     {
@@ -403,7 +355,7 @@
                 }
             }
         },
-        "/university/get": {
+        "/direction/{id}": {
             "get": {
                 "security": [
                     {
@@ -417,15 +369,15 @@
                     "application/json"
                 ],
                 "tags": [
-                    "university"
+                    "direction"
                 ],
-                "summary": "returns university by id",
+                "summary": "returns direction by id",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "university id",
+                        "description": "direction id",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -433,7 +385,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.University"
+                            "$ref": "#/definitions/models.Direction"
                         }
                     },
                     "400": {
@@ -451,7 +403,7 @@
                 }
             }
         },
-        "/university/get_all": {
+        "/university/": {
             "get": {
                 "security": [
                     {
@@ -567,6 +519,54 @@
                 "responses": {
                     "200": {
                         "description": "success"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apierrors.APIError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/apierrors.APIError"
+                        }
+                    }
+                }
+            }
+        },
+        "/university/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "AccessTokenHeader": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "university"
+                ],
+                "summary": "returns university by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "university id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.University"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
