# api/internal/delivery/http/controller/direction.go
@@ -35,7 +35,7 @@ func NewDirectionImpl(validate *validator.Validate, directionService service.Dir
 // @success 200 {object} map[string][]dto.Direction
 // @failure 400 {object} apierrors.APIError
 // @failure 401 {object} apierrors.APIError
-// @router /direction/get_all [get].
+// @router /direction/ [get].
 func (u *DirectionImpl) GetAll(c *gin.Context) {
 	_, err := middleware.GetUserID(c)
 	if err != nil {
@@ -62,13 +62,13 @@ func (u *DirectionImpl) GetAll(c *gin.Context) {
 // @accept json
 // @produce json
 // @security AccessTokenHeader
-// @param id query int true "direction id"
+// @param id path int true "direction id"
 // @success 200 {object} models.Direction
 // @failure 400 {object} apierrors.APIError
 // @failure 401 {object} apierrors.APIError
-// @router /direction/get [get].
+// @router /direction/{id} [get].
 func (u *DirectionImpl) Get(c *gin.Context) {
-	id, err := strconv.Atoi(c.Query("id"))
+	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		u.logger.Error(err)
 		c.AbortWithStatusJSON(http.StatusBadRequest, apierrors.InvalidQueryIDParam)
